2009-01-28  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/functions.php, operation/agentes/sla_view.php,
	  operation/agentes/ver_agente.php,
	  operation/reporting/reporting_xml.php,
	  operation/reporting/reporting_viewer.php: Fixed typo.

	* include/languages/index.pot: Updated PO template.

	* include/languages/pt_BR.po, include/languages/es.po,
	  include/languages/pt_BR.mo, include/languages/es.mo: Updated
	  translations.

2009-01-28  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/configure_alert_template.php: Removed a javascript
	debug message that avoids normal operation if firebug is not
	installed.

2009-01-26  Sancho Lerena  <slerena@artica.es>

	* include/functions_reporting.php: Fixed count of total alerts. Ignore
	delete pending modules.
	
	* operation/agentes/status_monitor.php: Added filter for pending delete 
	modules.
	
	* reporting/fgraph.php: Fixed typo in combined graphs that makes them
	unusable. Now renders fine.
	
	* pandora_console_upgrade: New script to upgrade console from latest code. 
	Also upgrade database (from 2.0 to 2.1/Trunk version).
	
	* godmode/agentes/alert_manager.php: Notice fix when no modules defined.

	* godmode/agentes/configurar_agente.php: Delete agent renames modulename to
	avoid that a pending delete module makes this module name unusable until
	efective deletion.

2009-01-26  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/styles/pandora.css: Fixed several small errors. Now it looks 
	more similar on other browsers.
	
	* operation/events/events.php: Fixed filter to use get_users ()
	
	* reporting/fgraph.php: Fixed several issues with user graphs

2009-01-26  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/configure_alert_template.php: Decode HTML entities of
	value because it was giving unexpected results.

2009-01-26  Esteban Sanchez  <estebans@artica.es>

	* include/functions_ui.php: print_alert_template_example() now
	replaces also the value.
