@@ -1,3 +1,8 @@
+2009-01-28  Sancho Lerena  <slerena@artica.es>
+
+	* estado_grupo.php: Async modules and keepalive module don't show as down
+	anymore.
+
 2009-01-28  Jorge Gonzalez  <jorgegonz@artica.es>
 
 	* include/functions.php, operation/agentes/sla_view.php,
